--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="header">
             <h1>Fashion blog</h1>
             <div class="navMenu">
+                <a href="#">Upload</a>
                 <a href="#">home</a>
                 <a href="#">about</a>
                 <a href="#">contact</a>
